--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -10,45 +10,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-<div id="app">
-    <div  v-for="(item,index) in items" :key="index">
-        <input type="text" v-model="n1">
-        <input type="text" v-model="n2">
-        {{sum}}
-    </div>
-    <button @click='onAdd()'>添加</button>
-    <button @click='con'>打印数组状态</button>
-
-</div>
+sucsess!
 </body>
-<script>
-    var app = new Vue(
-        {
-            el:"#app",
-            data(){
-                return{
-                    n1:'',
-                    n2:'',
-                    items: [
-                        {name:"", sex:""}
-                    ]
-                }
-            },
-            methods: {
-                onAdd() {
-                    var man ={name:"", sex:""}
-                    this.items.push(man);
-                    console.log(this.items);
-                },
-                con(){
-                    console.log(this.sum);
-                }
-            },
-            computed:{
-                sum:function(){
-                    return this.n1+this.n2;
-                }
-            }
-        })
-</script>
 </html>
