--- a/src/main/resources/templates/teacher/menu.html
+++ b/src/main/resources/templates/teacher/menu.html
@@ -21,6 +21,7 @@
   <link href="/css/style-responsive.css" rel="stylesheet">
   <!-- 1.vue开发环境版本，包含了有帮助的命令行警告 -->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
   <!-- 官网提供的 axios 在线地址 -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
